--- a/css/banner.css
+++ b/css/banner.css
@@ -4,21 +4,22 @@
 }
 
 .banner__container { 
+  display: inline-flex;
+  flex-direction: column;
   padding: 9.375rem 0 2rem 0;
+  row-gap: 1rem;
 }
 
 .banner__titulo {
   font-size: 3.25rem;
   font-weight: bold;
   color: #FFF;
-  margin-bottom: 1rem;
 }
 
 .banner__conteudo {
   font-size: 1.375rem;
   font-weight: 700;
   color: #FFF;
-  margin-bottom: 1rem;
 }
 
 .banner__consoles {
@@ -32,5 +33,5 @@
 
 .banner__consoles:hover {
   background: #5595E9;
-  
+  transition: 0.2s;
 }
